- the selected accent color will now be used instead of the default color - when tapping the watch face, an update of accentColor and prideRing is forced - added new icons for complications selectors (and removed old ones) - updated ring icon to the correct variant - added proper watch preview - renamed watch face

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,10 +48,10 @@
 
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_analog" />
+                android:resource="@drawable/awatch_preview" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_analog" />
+                android:resource="@drawable/awatch_preview" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
                 android:value="fr.alexisbn.awatch.CONFIG_ANALOG" />
